<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_all_bets"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_all_bets" />
        <item
            android:id="@+id/nav_my_bets"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_my_bets" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>
